# digital_diffeomorphism

./: .gitignore  MANIFEST.in  README.md  example.py  requirements.txt  setup.cfg
digital_diffeomorphism/: __init__.py  calc_jac_dets.py  cli.py  core.py  jacobian_calculator.py  jacobian_calculator_torch.py  kernel_creator.py  non_diffeomorphic_measures.py  utils.py
examples/: example_nda.py  example_ndv.py
tests/: test_core.py  test_nda.py  test_proposition_5.py
