[metadata]
name = digital_diffeomorphism
version = attr: digital_diffeomorphism.__version__
description = Non-diffeomorphic volume and non-diffeomorphic area computation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yihao6/digital_diffeomorphism
author = Yihao Liu
author_email = yliu236@jhu.edu
license = GNU General Public License v3
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
keywords = registration, medical images, digital diffeomorphism
project_urls =
    Bug Tracker = https://github.com/yihao6/digital_diffeomorphism/issues

[options]
packages = find:
install_requires =
    nibabel>=3,<5
    numpy>=1.20,<2
    scipy>=1.5,<2
python_requires = >=3.7

include_package_data = True
test_suite = tests
zip_safe = False

[options.packages.find]
exclude =
    tests
    docs

[options.entry_points]
console_scripts =
    ndv = digital_diffeomorphism.cli:non_diffeomorphic_volume
    nda = digital_diffeomorphism.cli:non_diffeomorphic_area
